--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <ul>
         <li id="home"><a href="#">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     </div>
 
