done xcept accessibility

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <li id="home"><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         </div>
@@ -66,12 +66,7 @@
                 <li><a href="#" class="fa fa-twitter"></a></li>
             </ul>
             </div>
-            <div class="number">
-            <p>+44 345 678 903</p>
-            </div>
-            <div class="mail">
-            <a href="#">abcd@mail.com</a>
-             </div>
+            
         
         </div>
     </footer>
